--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,5 +1,4 @@
-
-<h1 class="title is-2 has-text-primary">Edit</h1>
+<h2 class="title is-2 has-text-primary">Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
@@ -12,16 +11,16 @@
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
-∫
+
   <div class="field">
     <label class="label">Password</label> <i>(leave blank if you don't want to change it)</i><br />
     <label class="label">Password</label>
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
+      <br />
       <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
-
 
   <div class="field">
     <label class="label">Password Confirmation</label>
@@ -39,10 +38,7 @@
 <% end %>
 
 <h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
 <a align='center'>
-<%= button_to "Back", :back ,:id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", %>
+<p>Unhappy? <%= button_to "Cancel my account",:id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined" ,registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<%= link_to "Back", :back %>
 </a>
