--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -12,7 +12,7 @@
   <div class="field">
     <label class="label">Password (<%= @minimum_password_length %> characters minimum)</label>
     <% if @minimum_password_length %>
-    <% end %>
+    <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
