--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -1,39 +1,38 @@
 <div align='center'>
-    <h1 class="title is-3">Cuenta</h1>
+<h1 class="title is-2 has-text-primary">Cuenta</h1>
 
-    <h3>Datos Personales</h3>
-    <p>
-        <strong>Id usuario:</strong>
-        <%= @user.id %>
-    </p>
-    <p>
-        <strong>Nombre:</strong>∫
-        <%= @user.name %>
-    </p>
-    <p>
-        <strong>Email:</strong>
-        <%= @user.email %>
-    </p>
-    <p>
-        <strong>Dirección:</strong>
-        <%= @user.address %>
-    </p>
-    <p>
-        <strong>Género:</strong>
-        <%= @user.gender %>
-    </p>
-    <p>
-        <strong>Teléfono:</strong>
-        <%= @user.phone %>
-    </p>
-</div>
-<br> </br>
+<h3>Datos Personales</h3>
+<p>
+    <strong>Id usuario:</strong>
+    <%= @user.id %>
+</p>
+<p>
+    <strong>Nombre:</strong>
+    <%= @user.name %>
+</p>
+<p>
+    <strong>Email:</strong>
+    <%= @user.email %>
+</p>
+<p>
+    <strong>Dirección:</strong>
+    <%= @user.address %>
+</p>
+<p>
+    <strong>Género:</strong>
+    <%= @user.gender %>
+</p>
+<p>
+    <strong>Teléfono:</strong>
+    <%= @user.phone %>
+</p>
+
 <h3 align='center'>Turnos Publicados Activos</h3>
 <div align='center' style="display: flex; flex-flow: wrap; ">
     <% @turnos.each do |turno|%>
         <%if turno.user_id == current_user.id and turno.estado == "ACTIVO"%>
             <div style="border: solid 1px; width: 200px; 
-            padding: 10px; align-text: center; margin: 5px; background-color: #FFDD57">
+            padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
             <b>ID Conductor </b><p><%= @user.id%></p>
             <b>Conductor </b><p><%= @user.name%></p>
             <b>Cantidad asientos </b><p><%= turno.cantidad_asientos%></p>
@@ -47,15 +46,14 @@
         <% end %>
 </div>
 <% end %>
-<br> </br>
+<br/>
 
 <h3 align='center'>Turnos Publicados Confirmados</h3>
-
 <div align='center' style="display: flex; flex-flow: wrap; ">
     <% @turnos.each do |turno|%>
         <%if turno.user_id == current_user.id and turno.estado == "CONFIRMADO"%>
             <div style="border: solid 1px; width: 200px; 
-            padding: 10px; align-text: center; margin: 5px; background-color: #FFDD57">
+            padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
             <b>ID Conductor </b><p><%= @user.id%></p>
             <b>Conductor </b><p><%= @user.name%></p>
             <b>Cantidad asientos </b><p><%= turno.cantidad_asientos%></p>
@@ -70,14 +68,14 @@
         <% end %>
 </div>
 <% end %>
-<br> </br>
+<br/>
 
 <h3 align='center'>Turnos Publicados Completados</h3>
 <div align='center' style="display: flex; flex-flow: wrap; ">
     <% @turnos.each do |turno|%>
         <%if turno.user_id == current_user.id and turno.estado == "COMPLETADO"%>
             <div style="border: solid 1px; width: 200px; 
-            padding: 10px; align-text: center; margin: 5px; background-color: #FFDD57">
+            padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
             <b>ID Conductor </b><p><%= @user.id%></p>
             <b>Conductor </b><p><%= @user.name%></p>
             <b>Cantidad asientos </b><p><%= turno.cantidad_asientos%></p>
