--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -33,15 +33,11 @@
         <%if turno.user_id == current_user.id and turno.estado == "ACTIVO"%>
             <div style="border: solid 1px; width: 200px; 
             padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
-            <b>ID Conductor </b><p><%= @user.id%></p>
-            <b>Conductor </b><p><%= @user.name%></p>
-            <b>Cantidad asientos </b><p><%= turno.cantidad_asientos%></p>
+            <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
             <b>Hora salida </b><p><%= turno.hora_salida%></p>
+            <b>Día de la semana </b><p><%= turno.dia_semana%></p>
             <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
             <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
-            <b>Día de la semana </b><p><%= turno.dia_semana%></p>
-            <b>Tipo </b><p><%= turno.tipo%></p>
-            <b>Estado </b><p><%= turno.estado%></p>
             <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
         <% end %>
 </div>
@@ -55,16 +51,11 @@
         <%if turno.user_id == current_user.id and turno.estado == "CONFIRMADO"%>
             <div style="border: solid 1px; width: 200px; 
             padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
-            <b>ID Conductor </b><p><%= @user.id%></p>
-            <b>Conductor </b><p><%= @user.name%></p>
-            <b>Cantidad asientos </b><p><%= turno.cantidad_asientos%></p>
+            <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
             <b>Hora salida </b><p><%= turno.hora_salida%></p>
+            <b>Día de la semana </b><p><%= turno.dia_semana%></p>
             <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
             <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
-            <b>Día de la semana </b><p><%= turno.dia_semana%></p>
-            <b>Tipo </b><p><%= turno.tipo%></p>
-            <b>Estado </b><p><%= turno.estado%></p>
-            <b></b><p><%= link_to 'Mensajes', turnos_index_path %></p>
             <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
         <% end %>
 </div>
@@ -77,16 +68,12 @@
         <%if turno.user_id == current_user.id and turno.estado == "COMPLETADO"%>
             <div style="border: solid 1px; width: 200px; 
             padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
-            <b>ID Conductor </b><p><%= @user.id%></p>
-            <b>Conductor </b><p><%= @user.name%></p>
-            <b>Cantidad asientos </b><p><%= turno.cantidad_asientos%></p>
+            <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
             <b>Hora salida </b><p><%= turno.hora_salida%></p>
+            <b>Día de la semana </b><p><%= turno.dia_semana%></p>
             <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
             <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
-            <b>Día de la semana </b><p><%= turno.dia_semana%></p>
-            <b>Tipo </b><p><%= turno.tipo%></p>
-            <b>Estado </b><p><%= turno.estado%></p>
-            <b></b><p><%= link_to 'Reseñas', turnos_index_path %></p>
+            <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
         <% end %>
 </div>
 <% end %>
