--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -1,36 +1,26 @@
 <h1 align='center' class = "title is-2 has-text-primary" >Turnos</h1>
 
-<a>
-<%= button_to "Nuevo turno", turnos_new_path,:id => "boton_turnos", :class => "button is-primary is-rounded is-outlined is-right", :method => :get %>
-</a>
+<div align='center'>    
+    <a>
+    <%= button_to "Nuevo turno", turnos_new_path,:id => "boton_turnos", :class => "button is-primary is-rounded is-outlined is-right", :method => :get %>
+    </a>
+</div>
 
 <br>
 
-<h3 class = "title is-4 has-text-dark" >Turnos Activos</h3>
-<div align='center' style="display: flex; flex-flow: wrap;">
-    <% @turnos.each do |turno|%>
-        <%if turno.user_id != current_user.id and turno.estado == "ACTIVO"%>
-            <div style="border: solid 1px; width: 200px; 
-            padding: 10px; align-text: center; margin: 5px; background-color: lightblue;">
-            <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
-            <b>Hora salida </b><p><%= turno.hora_salida%></p>
-            <b>Día de la semana </b><p><%= turno.dia_semana%></p>
-            <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
-            <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
-            <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
-        <% end %>
-</div>
-<% end %>
+<div class="row">
 
-<h3 class = "title is-4 has-text-dark" >Turnos Solicitados Confirmados</h3>
-<div align='center' style="display: flex; flex-flow: wrap; ">
-    <% @requests.each do |request|%>
-        <%if request.user_id == current_user.id %>
-            <% @turno = Turno.find(request.turno.id)%> 
-            <%if @turno.estado == "CONFIRMADO"%>
+    <div class="column">
+    <div align='left' style="display: flex; flex-flow: wrap; ">
+    <h3 class = "title is-4 has-text-dark" >Turnos Activos</h3>
+    </div>
+    <div align='center' style="display: flex; flex-flow: wrap;">
+        <% @no_vacio = false %>
+        <% @turnos.each do |turno|%>
+            <%if turno.user_id != current_user.id and turno.estado == "ACTIVO"%>
+                <% @no_vacio = true %>
                 <div style="border: solid 1px; width: 200px; 
-                padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
-                <% @user = User.find(@turno.user_id)%>
+                padding: 10px; align-text: center; margin: 5px; background-color: lightblue;">
                 <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
                 <b>Hora salida </b><p><%= turno.hora_salida%></p>
                 <b>Día de la semana </b><p><%= turno.dia_semana%></p>
@@ -39,26 +29,76 @@
                 <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
             <% end %>
         <% end %>
-</div>
-<% end %>
-<br/>
+        <% if not @no_vacio %>
+            <br/>
+            <div align='center' style="display: flex; flex-flow: wrap; ">
+            <h4 class = "title is-4 has-text-dark" >No existen turnos activos</h4>
+            </div>
+        <% end %>
+    </div>
+    </div>
 
-<h3 class = "title is-4 has-text-dark" >Turnos Solicitados Completados</h3>
-<div align='center' style="display: flex; flex-flow: wrap; ">
-    <% @requests.each do |request|%>
-        <%if request.user_id == current_user.id %>
-            <% @turno = Turno.find(request.turno.id)%> 
-            <%if @turno.estado == "COMPLETADO"%>
-                <div style="border: solid 1px; width: 200px; 
-                padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
-                <b>Conductor </b><p><%= @users.find(@turno.user_id).name%></p>
-                <b>Hora salida </b><p><%= @turno.hora_salida%></p>
-                <b>Día de la semana </b><p><%= @turno.dia_semana%></p>
-                <b>Dirección salida </b><p><%= @turno.direccion_salida%></p>
-                <b>Dirección llegada </b><p><%= @turno.direccion_llegada%></p>
-                <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => @turno.id) %></p>
+    <div class="column">
+    <div align='center' style="display: flex; flex-flow: wrap; ">
+    <h3 class = "title is-4 has-text-dark" >Turnos Solicitados Confirmados</h3>
+    </div>
+    <div align='center' style="display: flex; flex-flow: wrap; ">
+        <% @no_vacio = false %>
+        <% @requests.each do |request|%>
+            <%if request.user_id == current_user.id %>
+                <% @turno = Turno.find(request.turno.id)%> 
+                <%if @turno.estado == "CONFIRMADO"%>
+                    <% @no_vacio = true %>
+                    <div style="border: solid 1px; width: 200px; 
+                    padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
+                    <% @user = User.find(@turno.user_id)%>
+                    <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
+                    <b>Hora salida </b><p><%= turno.hora_salida%></p>
+                    <b>Día de la semana </b><p><%= turno.dia_semana%></p>
+                    <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
+                    <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
+                    <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
+                <% end %>
             <% end %>
         <% end %>
+        <% if not @no_vacio %>
+            <br/>
+            <div align='center' style="display: flex; flex-flow: wrap; ">
+            <h4 class = "title is-4 has-text-dark" >No tiene turnos confirmados</h4>
+            </div>
+        <% end %>
+    </div>
+    </div>
+
+    <div class="column">
+    <div align='center' style="display: flex; flex-flow: wrap; ">
+    <h3 class = "title is-4 has-text-dark" >Turnos Solicitados Completados</h3>
+    </div>
+    <div align='center' style="display: flex; flex-flow: wrap; ">
+        <% @no_vacio = false %>
+        <% @requests.each do |request|%>
+            <%if request.user_id == current_user.id %>
+                <% @turno = Turno.find(request.turno.id)%> 
+                <%if @turno.estado == "COMPLETADO"%>
+                    <% @no_vacio = true %>
+                    <div style="border: solid 1px; width: 200px; 
+                    padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
+                    <b>Conductor </b><p><%= @users.find(@turno.user_id).name%></p>
+                    <b>Hora salida </b><p><%= @turno.hora_salida%></p>
+                    <b>Día de la semana </b><p><%= @turno.dia_semana%></p>
+                    <b>Dirección salida </b><p><%= @turno.direccion_salida%></p>
+                    <b>Dirección llegada </b><p><%= @turno.direccion_llegada%></p>
+                    <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => @turno.id) %></p>
+                <% end %>
+            <% end %>
+        <% end %>
+        <% if not @no_vacio %>
+            <br/>
+            <div align='center' style="display: flex; flex-flow: wrap; ">
+            <h4 class = "title is-4 has-text-dark" >No tiene turnos completados</h4>
+            </div>
+        <% end %>
+    </div>
+    </div>
 </div>
-<% end %>
 <br/>
