--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,33 +30,33 @@
         <h1 class="title is-3 has-text-primary">DCCARPOOLING</h1>
       </div>
 
-      <div class="navbar-end">
-        <div id="navbarBasicExample" class="navbar-menu">
+      <% if current_user %>
+        <div class="navbar-end">
           <div class="navbar-item has-dropdown is-hoverable is-black">
             <a class="navbar-link is-arrowless">
-              Menu
+              <h4 class="title is-3 has-text-primary">Menu</h4>
             </a>
 
             <div class="navbar-dropdown is-right is-boxed">
-              <% if current_user %>
-              <a class="navbar-item">
-                <li class="title is-5 has-text-primary is-active"><%= link_to "Cuenta", users_show_path(:id => current_user.id) %></li>
-              </a>
-              <a class="navbar-item">
-                <li class="title is-5 has-text-primary is-active"><%= link_to "Turnos", turnos_index_path %></li>
-              </a>
-              <a class="navbar-item">
-                <li class="title is-5 has-text-primary is-active"><%= link_to "Solicitudes", requests_index_path %></li>
-              </a>
-              <a>
-                <%= button_to "Cerrar sesion", destroy_user_session_path,:id => "boton_sign_out", :class => "button is-primary is-inverted has-background-warning", :method => :delete %>
-              </a>
-              <% end %>
-              <hr class="navbar-divider">
+              <div class="dropdown-content">
+                <a class="dropdown-item">
+                  <div align="right"  class="title is-5 has-text-black is-active"><%= link_to "Cuenta", users_show_path(:id => current_user.id) %></div>
+                </a>
+                <a class="dropdown-item">
+                  <div align="right"  class="title is-5 has-text-black is-active"><%= link_to "Turnos", turnos_index_path %></div>
+                </a>
+                <a class="dropdown-item">
+                  <div align="right"  class="title is-5 has-text-black is-active"><%= link_to "Solicitudes", requests_index_path %></div>
+                </a>
+                <hr class="dropdown-divider">
+                <a class="dropdown-item">
+                  <div align="right"  class="title is-5 has-text-black is-active has-text-right"><%= link_to "Cerrar sesion", destroy_user_session_path,  :method => :delete %></div>
+                </a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      <% end %>
     </nav>
 
     <div align='right'>
