--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,30 +27,25 @@
 
       <div style="border: 5px; width: 300px; padding: 10px; 
         align-text: center; margin: 5px; text-align: center; color: #198BB9";>
-        <h1 class="title is-3 has-text-primary">DCCARPOOLING</h1>
+        <div class="title is-3 has-text-primary">DCCARPOOLING</div>
       </div>
 
       <% if current_user %>
         <div class="navbar-end">
           <div class="navbar-item has-dropdown is-hoverable is-black">
             <a class="navbar-link is-arrowless">
-              <h4 class="title is-3 has-text-primary">Menu</h4>
+              <div style="border: 5px; width: 150px; padding: 10px; ";>
+                <h4 class="title is-3 has-text-primary">Menu</h4>
+              </div>
             </a>
 
-            <div class="navbar-dropdown is-right is-boxed">
+            <div class="navbar-dropdown is-center is-boxed">
               <div class="dropdown-content">
-                <a class="dropdown-item">
-                  <div align="right"  class="title is-5 has-text-black is-active"><%= link_to "Cuenta", users_show_path(:id => current_user.id) %></div>
-                </a>
-                <a class="dropdown-item">
-                  <div align="right"  class="title is-5 has-text-black is-active"><%= link_to "Turnos", turnos_index_path %></div>
-                </a>
-                <a class="dropdown-item">
-                  <div align="right"  class="title is-5 has-text-black is-active"><%= link_to "Solicitudes", requests_index_path %></div>
-                </a>
+                  <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Cuenta", users_show_path(:id => current_user.id) %></div>
+                  <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Turnos", turnos_index_path %></div>
+                  <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Solicitudes", requests_index_path %></div>
                 <hr class="dropdown-divider">
-                <a class="dropdown-item">
-                  <div align="right"  class="title is-5 has-text-black is-active has-text-right"><%= link_to "Cerrar sesion", destroy_user_session_path,  :method => :delete %></div>
+                  <div align="center"  class="title is-5 has-text-black is-active has-text-center"><%= link_to "Cerrar sesion", destroy_user_session_path,  :method => :delete %></div>
                 </a>
               </div>
             </div>
@@ -58,18 +53,7 @@
         </div>
       <% end %>
     </nav>
-
-    <div align='right'>
-      <p class="alert has-text-primary"><%= alert %></p>
-      <% if current_user %>
-        <p class="menu-label"></p>
-          <ul id = "menu_list" class="menu-list">
-            <li class="title is-5 has-text-primary is-active"><%= link_to "Cuenta", users_show_path(:id => current_user.id) %></li>
-            <li class="title is-5 has-text-primary is-active"><%= link_to "Turnos", turnos_index_path %></li>
-            <li class="title is-5 has-text-primary is-active"><%= link_to "Solicitudes", requests_index_path %></li>
-          </ul>
-      <% end %>
-    </div>
+    <br/>
     
     <%= yield %>
   </body>
