--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -14,19 +14,21 @@
     <div align='left' style="display: flex; flex-flow: wrap; ">
     <h3 class = "title is-4 has-text-dark" >Turnos Activos</h3>
     </div>
+    <br/>
     <div align='center' style="display: flex; flex-flow: wrap;">
         <% @no_vacio = false %>
+        <div class="row">
         <% @turnos.each do |turno|%>
             <%if turno.user_id != current_user.id and turno.estado == "ACTIVO"%>
-                <% @no_vacio = true %>
-                <div style="border: solid 1px; width: 200px; 
-                padding: 10px; align-text: center; margin: 5px; background-color: lightblue;">
-                <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
-                <b>Hora salida </b><p><%= turno.hora_salida%></p>
-                <b>Día de la semana </b><p><%= turno.dia_semana%></p>
-                <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
-                <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
-                <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
+                <div class="column-turno">
+                    <% @no_vacio = true %>
+                    <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
+                    <b>Hora salida </b><p><%= turno.hora_salida%></p>
+                    <b>Día de la semana </b><p><%= turno.dia_semana%></p>
+                    <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
+                    <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
+                    <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
+                </div>
             <% end %>
         <% end %>
         <% if not @no_vacio %>
@@ -39,18 +41,21 @@
     </div>
 
     <div class="column">
+    <br/>
+    <br/>
     <div align='center' style="display: flex; flex-flow: wrap; ">
     <h3 class = "title is-4 has-text-dark" >Turnos Solicitados Confirmados</h3>
     </div>
+    <br/>
     <div align='center' style="display: flex; flex-flow: wrap; ">
         <% @no_vacio = false %>
+        <div class="row">
         <% @requests.each do |request|%>
             <%if request.user_id == current_user.id %>
                 <% @turno = Turno.find(request.turno.id)%> 
                 <%if @turno.estado == "CONFIRMADO"%>
+                    <div class="column-turno">
                     <% @no_vacio = true %>
-                    <div style="border: solid 1px; width: 200px; 
-                    padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
                     <% @user = User.find(@turno.user_id)%>
                     <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
                     <b>Hora salida </b><p><%= turno.hora_salida%></p>
@@ -58,6 +63,7 @@
                     <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
                     <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
                     <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
+                </div>
                 <% end %>
             <% end %>
         <% end %>
@@ -69,26 +75,31 @@
         <% end %>
     </div>
     </div>
+    </div>
 
     <div class="column">
+    <br/>
+    <br/>
     <div align='center' style="display: flex; flex-flow: wrap; ">
     <h3 class = "title is-4 has-text-dark" >Turnos Solicitados Completados</h3>
     </div>
+    <br/>
     <div align='center' style="display: flex; flex-flow: wrap; ">
         <% @no_vacio = false %>
+        <div class="row">
         <% @requests.each do |request|%>
             <%if request.user_id == current_user.id %>
                 <% @turno = Turno.find(request.turno.id)%> 
                 <%if @turno.estado == "COMPLETADO"%>
                     <% @no_vacio = true %>
-                    <div style="border: solid 1px; width: 200px; 
-                    padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
+                    <div class="column-turno">
                     <b>Conductor </b><p><%= @users.find(@turno.user_id).name%></p>
                     <b>Hora salida </b><p><%= @turno.hora_salida%></p>
                     <b>Día de la semana </b><p><%= @turno.dia_semana%></p>
                     <b>Dirección salida </b><p><%= @turno.direccion_salida%></p>
                     <b>Dirección llegada </b><p><%= @turno.direccion_llegada%></p>
                     <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => @turno.id) %></p>
+                </div>
                 <% end %>
             <% end %>
         <% end %>
