--- a/app/views/turnos/new.html.erb
+++ b/app/views/turnos/new.html.erb
@@ -1,35 +1,42 @@
 <h1 align='center' class = "title is-2 has-text-primary" >Crear Turno</h1>
 
+<div class="column is-4 is-offset-4">
 <div  align='center'>
 <%= form_for @turno, as: :turno do |form| %>
 
     <div>
-        <label class="label">Cantidad asientos</label>
-        <%= form.text_field :cantidad_asientos%>
+        <%= form.text_field :cantidad_asientos, class: "input is-primary is-rounded is-outlined", placeholder:"Cantidad asientos"%>
     </div>
+    <br/>
+    <div class="field-group">
+        <h1 align='center' class = "title is-4 has-text-black" >Hora de salida</h1>
+        <div class="field is-inline-block-desktop">
+            <div class="select">
+                <%= form.time_select :hora_salida, time_separator: '</div><div class="select">' %>
+            </div>
+        </div>
+    </div>
+    <br/>
     <div>
-        <label class="label">Hora de salida</label>
-        <%= form.time_select :hora_salida%>
+        <%= form.text_field :direccion_salida, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección de salida"%>
     </div>
+    <br/>
     <div>
-        <label class="label">Dirección de salida</label>
-        <%= form.text_field :direccion_salida%>
+        <%= form.text_field :direccion_llegada, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección de llegada"%>
     </div>
+    <br/>
     <div>
-        <label class="label">Dirección de llegada</label>
-        <%= form.text_field :direccion_llegada%>
+        <%= form.text_field :dia_semana, class: "input is-primary is-rounded is-outlined", placeholder:"Dia de la semana"%>
     </div>
+    <br/>
     <div>
-        <label class="label">Dia de la semana</label>
-        <%= form.text_field :dia_semana%>
+        <%= form.text_field :tipo, class: "input is-primary is-rounded is-outlined", placeholder:"Tipo"%>
     </div>
+    <br/>
     <div>
-        <label class="label">Tipo</label>
-        <%= form.text_field :tipo%>
+        <%= form.submit 'Crear turno', class: "button is-primary is-inverted is-rounded is-outlined" %>
     </div>
-    <div>
-        <%= form.submit 'Crear turno' %>
-    </div>
+    <br/>
 
 <% end %>
 </div>
@@ -37,3 +44,4 @@
 <a align='center'>
 <%= button_to "Volver", turnos_index_path,:id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :get%>
 </a>
+</div>
