--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,56 +2,55 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
+  <div class="column is-4 is-offset-4">
+    <div align='center'>
+    <div class="field">
+      <%= f.email_field :email, class: "input is-primary is-rounded is-outlined", placeholder:"Email", autofocus: true, autocomplete: "email" %>
+    </div>
 
-  <div align='center'>
-  <div class="field">
-    <label class="label">Email</label>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <% if @minimum_password_length %>
+      <% end %><br/>
+      <%= f.password_field :password, class: "input is-primary is-rounded is-outlined", placeholder:"Contraseña", autocomplete: "new-password" %>
+    </div>
 
-  <div class="field">
-    <label class="label">Password (<%= @minimum_password_length %> characters minimum)</label>
-    <% if @minimum_password_length %>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <br/>
+    <div class="field">
+      <%= f.password_field :password_confirmation, class: "input is-primary is-rounded is-outlined", placeholder:"Repita su contraseña", autocomplete: "new-password" %>
+    </div>
 
-  <div class="field">
-    <label class="label">Password Confirmation</label>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <br/>
+    <div class="field">
+      <%= f.text_field :name, class: "input is-primary is-rounded is-outlined", placeholder:"Nombre" %>
+    </div>
 
-  <div class="field">
-    <label class="label">Name</label>
-    <%= f.text_field :name %>
-  </div>
+    <br/>
+    <div class="field">
+      <%= f.text_field :address, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección" %>
+    </div>
 
-  <div class="field">
-    <label class="label">Adress</label>
-    <%= f.text_field :address %>
-  </div>
+    <br/>
+    <div class="field">
+      <%= f.text_field :description, class: "input is-primary is-rounded is-outlined", placeholder:"Descripción" %>
+    </div>
 
-  <div class="field">
-    <label class="label">Description</label>
-    <%= f.text_field :description %>
-  </div>
+    <br/>
+    <div class="field">
+      <%= f.text_field :gender, class: "input is-primary is-rounded is-outlined", placeholder:"Genero" %>
+    </div>
 
-  <div class="field">
-    <label class="label">Gender</label>
-    <%= f.text_field :gender %>
+    <br/>
+    <div class="field">
+      <%= f.text_field :phone, class: "input is-primary is-rounded is-outlined", placeholder:"Telefono" %>
+    </div>
+    
+    <br/>
+    <div class="actions">
+      <%= f.submit "Registrarse", class: "button is-primary is-inverted is-rounded is-outlined" %>
+    </div>
+    <% end %>
+    <div align='center'>
+    <%= render "users/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <label class="label">Phone</label>
-    <%= f.text_field :phone %>
-  </div>
-  
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-</div>
-<br/>
-<div align='center'>
-<%= render "users/shared/links" %>
 </div>
