--- a/app/views/turnos/edit.html.erb
+++ b/app/views/turnos/edit.html.erb
@@ -41,7 +41,7 @@
         </div>
     <% end %>
     <div>
-        <%= form.submit 'Editar turno' %>
+        <%= form.submit 'Editar turno', :class => "button is-primary is-rounded is-outlined" %>
     </div>
     
 
