--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -31,17 +31,17 @@
 
     <br/>
     <div class="field">
-      <%= f.text_field :description, class: "input is-primary is-rounded is-outlined", placeholder:"Descripción" %>
+      <%= f.text_field :description, class: "input is-primary is-rounded is-outlined", placeholder:"Cuentanos un poco sobre tí" %>
     </div>
 
     <br/>
     <div class="field">
-      <%= f.text_field :gender, class: "input is-primary is-rounded is-outlined", placeholder:"Genero" %>
+      <%= f.text_field :gender, class: "input is-primary is-rounded is-outlined", placeholder:"Género" %>
     </div>
 
     <br/>
     <div class="field">
-      <%= f.text_field :phone, class: "input is-primary is-rounded is-outlined", placeholder:"Telefono" %>
+      <%= f.text_field :phone, class: "input is-primary is-rounded is-outlined", placeholder:"Teléfono" %>
     </div>
     
     <br/>
