arreglos drop down

--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -4,7 +4,7 @@
         <%= form_for @request, as: :request do |form| %>
 
             <%= form.hidden_field :turno_id, value: @turno_id %>
-            <%= form.text_field :descripcion, {class: "input is-primary is-rounded is-outlined", placeholder:"Agrega aquí tu dirección"}%>
+            <%= form.text_field :descripcion, {class: "input is-primary is-rounded is-outlined", placeholder:"Agrega aquí la dirección de encuentro"}%>
             <br/>
             <br/>
             <div>
