--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -2,8 +2,8 @@
 <h1 class="title is-2 has-text-primary">Turno</h1>
 
 <p>
-    <strong>ID Usuario: </strong>
-    <%= @turno.user_id %>
+    <strong>Nombre conductor: </strong>
+    <%= User.find(@turno.user_id).name %>
 </p>
 <p>
     <strong>Cantidad Asientos: </strong>
