Arreglo controlador turnos

--- a/app/views/turnos/edit.html.erb
+++ b/app/views/turnos/edit.html.erb
@@ -11,7 +11,7 @@
             <h1 align='center' class = "title is-6 has-text-black" >Hora de salida</h1>
             <div class="field is-inline-block-desktop">
                 <div class="select">
-                    <%= form.time_select :hora_salida, time_separator: '<div class="select"></div>' %>
+                    <%= form.time_select :hora_salida, time_separator: '</div><div class="select">' %>
                 </div>
             </div>
         </div>
