--- a/app/views/resenas/show.html.erb
+++ b/app/views/resenas/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Reseña</h1>
 
 <p>
-    <strong>ID Viaje: </strong>
+    <strong>Número Turno: </strong>
     <%= @resena.turno.id %>
 </p>
 <p>
