--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -2,6 +2,10 @@
 <h1 class="title is-2 has-text-primary">Turno</h1>
 
 <p>
+    <strong>Número Turno: </strong>
+    <%= @turno.id %>
+</p>
+<p>
     <strong>ID Usuario: </strong>
     <%= @turno.user_id %>
 </p>
