--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -5,12 +5,10 @@
     <% @requests.each do |request|%>
         <%if request.turno.user_id == current_user.id and request.estado == "PENDIENTE"%>
             <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px;">
-            <p>Id Solicitud: <%= request.id%></p>
+            <p>Número Turno: <%= request.turno.id%></p>
             <p>Id Usuario Turno: <%= request.turno.user_id%></p>
             <p>Id Usuario Solicitud: <%= request.user_id%></p>
-            <p>Id Publicación: <%= request.turno.id%></p>
-            <p>Estado: <%= request.estado%></p>
-            <p>Descripción: <%= request.descripcion%></p>
+            <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
             <%= link_to 'Responder', requests_edit_path(:id => request.id)%>
         <% end %>
 </div>
@@ -22,12 +20,10 @@
     <% @requests.each do |request|%>
         <%if request.turno.user_id == current_user.id and request.estado != "PENDIENTE"%>
             <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px; background-color: lightblue;">
-            <b>Id Solicitud: </b><p><%= request.id%></p>
-            <b>Id Usuario Turno: </b><p><%= request.turno.user_id%></p>
-            <b>Id Usuario Solicitud: </b><p><%= request.user_id%></p>
-            <b>Id Publicación: </b><p><%= request.turno.id%></p>
-            <b>Estado: </b><p><%= request.estado%></p>
-            <b>Descripción: </b><p><%= request.descripcion%></p>
+            <p>Número Turno: <%= request.turno.id%></p>
+            <p>Id Usuario Turno: <%= request.turno.user_id%></p>
+            <p>Id Usuario Solicitud: <%= request.user_id%></p>
+            <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
         <% end %>
 </div>
 <% end %>
@@ -38,12 +34,10 @@
     <% @requests.each do |request|%>
         <%if request.user_id == current_user.id and request.estado == "PENDIENTE"%>
             <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px; background-color: lightblue;">
-            <b>Id Solicitud: </b><p><%= request.id%></p>
-            <b>Id Usuario Turno: </b><p><%= request.turno.user_id%></p>
-            <b>Id Usuario Solicitud: </b><p><%= request.user_id%></p>
-            <b>Id Publicación: </b><p><%= request.turno.id%></p>
-            <b>Estado: </b><p><%= request.estado%></p>
-            <b>Descripción: </b><p><%= request.descripcion%></p>
+            <p>Número Turno: <%= request.turno.id%></p>
+            <p>Id Usuario Turno: <%= request.turno.user_id%></p>
+            <p>Id Usuario Solicitud: <%= request.user_id%></p>
+            <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
             <%= link_to 'Editar', requests_edit_path(:id => request.id)%>
         <% end %>
 </div>
@@ -55,12 +49,10 @@
     <% @requests.each do |request|%>
         <%if request.user_id == current_user.id and request.estado != "PENDIENTE"%>
             <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px;">
-            <p>Id Solicitud: <%= request.id%></p>
+            <p>Número Turno: <%= request.turno.id%></p>
             <p>Id Usuario Turno: <%= request.turno.user_id%></p>
             <p>Id Usuario Solicitud: <%= request.user_id%></p>
-            <p>Id Publicación: <%= request.turno.id%></p>
-            <p>Estado: <%= request.estado%></p>
-            <p>Descripción: <%= request.descripcion%></p>
+            <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
         <% end %>
 </div>
 <% end %>
